--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -255,6 +255,14 @@ input.ipt_rdo{position:absolute;top:0;left:0;z-index:-1;visibility: hidden;text-
 .ipt_rdo:disabled ~ .label_rdo::before{background-color:var(--Grayscale-100);}
 .ipt_rdo:disabled:checked ~ .label_rdo::before{border-color:var(--Text-Disable);}
 
+.ipt_rdo_btn_wrap {display:inline-flex;}
+.ipt_rdo_btn_wrap .ipt_rdo_btnst {position:absolute; top:0; left:0; z-index:-1; visibility:hidden; text-indent:-9999px; opacity:0;}
+.ipt_rdo_btn_wrap .label_rdo_btnst {display:inline-flex; justify-content:center; align-items:center; min-width:60px; height:44px; background-color:var(--Grayscale-100); border:1px solid var(--Primary-White); color:var(--Primary-White); border-radius:8px;}
+.ipt_rdo_btn_wrap .label_rdo_btnst span {font-size:var(--f12);}
+.ipt_rdo_btn_wrap .ipt_rdo_btnst.btn-primary:checked ~ .label_rdo_btnst {background-color:var(--Primary-Blue); border-color:var(--Primary-Blue);}
+.ipt_rdo_btn_wrap .ipt_rdo_btnst.btn-gray:checked ~ .label_rdo_btnst {background-color:var(--Grayscale-400); border-color:var(--Grayscale-400);}
+
+
 /*SelectBox - Common*/
 .select_div{width:100%;position:relative;}
 .select_div.w100{width:100%;}
@@ -477,14 +485,21 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 /** Etc - common **/
 .ellipsis{display:block;overflow:hidden;word-break:break-all;white-space:nowrap;text-overflow:ellipsis;-o-text-overflow:ellipsis;-ms-text-overflow:ellipsis;}
 .flex{display:flex;}
+.flex-inline {display:inline-flex;}
+.flex-column {flex-direction:column;}
 .flex-wrap{flex-wrap:wrap;}
 .items-center{align-items:center;}
 .justify-center{justify-content:center;}
-.justify-between{justify-content:space-between;}
+.justify-between {justify-content:space-between;}
+.justify-start {justify-content:flex-start !important;}
+.justify-end {justify-content:flex-end !important;}
+.align-between {align-content:space-between !important;}
 .table{display:table;}
 .table-cell{display:table-cell;}
 .th,.td{display:table-cell;}
 .ds-block{display:block;}
+
+.vert-top { vertical-align: top; } 
 
 .posiR{position:relative;}
 .posiA{position:absolute;}
@@ -493,13 +508,25 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 
 .w100{width:100%;}
 .w100 + .btn{flex-shrink:0;margin-left:10px;}
+.w110px {width:110px !important;}
+.w140px {width:140px !important;}
+.w240px {width:240px !important;}
+.w270px {width:270px !important;}
+.w290px {width:290px !important;}
+.w320px {width:320px !important;}
+.w370px {width:370px !important;}
+.w454px {width:454px !important;}
 
+.hAuto { height:auto !important; } 
+
+.mt0 {margin-top:0 !important;}
 .mt4{margin-top:4px;}
 .mt10{margin-top:10px;}
 .mt12{margin-top:12px;}
 .mt16{margin-top:16px;}
 .mt20{margin-top:20px;}
 .mt24{margin-top:24px;}
+.mt50{margin-top:50px;}
 
 .ml8{margin-left:8px;}
 .ml10{margin-left:10px;}
@@ -514,6 +541,10 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 .mb16{margin-bottom:16px;}
 
 .pt12{padding-top:12px;}
+
+.gap10 {gap:10px;}
+.gap16 {gap:16px;}
+.gap24 {gap:24px;}
 
 .bg-white{background:#fff;}
 .bg-skyblue{background: #CAF0F880;}
@@ -589,5 +620,47 @@ textarea.textarea{width:100%;height:164px;padding:16px;overflow-y:scroll;resize:
 .txt-c{text-align:center;}
 .txt-r{text-align:right;}
 
+.shadow-8 {box-shadow:0 0 8px 0 #0000000A;}
+.box-round8 { border-radius: 8px; }
+
+/* toggle-switch */
+.toggle-switch {display:inline-flex; justify-content:center; align-items:center; width:64px; height:32px;}
+.toggle-switch [type="checkbox"] {position:relative; appearance:none; width:64px; height:32px; padding:4px; border-radius:49px; background-color:var(--Grayscale-150); cursor:pointer; box-sizing:border-box; transition:all .15s ease;}
+.toggle-switch [type="checkbox"]::before {position:absolute; top:50%; transform:translateY(-50%); -webkit-transform:translateY(-50%); left:4px; content:''; width:24px; height:24px; background-color:var(--Primary-White); border-radius:16px;}
+.toggle-switch [type="checkbox"]::after {position:absolute; top:50%; transform:translateY(-50%); -webkit-transform:translateY(-50%); right:6px; content:'OFF'; width:26px; text-align:center; color:var(--Text-300);}
+.toggle-switch [type="checkbox"]:checked {background-color:var(--Primary-Blue); border-color:var(--Primary-Blue);}
+.toggle-switch [type="checkbox"]:checked::before {left:auto; right:4px;}
+.toggle-switch [type="checkbox"]:checked::after {right:auto; left:6px; content:'ON'; color:var(--Text-White);}
+.toggle-switch [type="checkbox"]:focus-visible {outline-offset:max(2px, 0.1em); outline:max(2px, 0.1em) solid var(--Grayscale-150);}
+.toggle-switch [type="checkbox"] + span {font-size:0; text-indent:-9999px; overflow:hidden;}  
+
+.datePicker_wrap {display:flex; align-items:center; gap:8px;}
+.datePicker_wrap input.datePicker {width:194px; border-color:var(--Primary-Black); background:var(--Primary-White) url(../images_admin/admin_ico_date.svg) center right 16px no-repeat; color:var(--Primary-Black);}
 
 
+/* treemap */
+.srch_portlet .btn_reset { width: 56px; height: 48px; background: #fff url(../images/svg/ico_reset.svg) no-repeat center center; border-radius: 8px; border: 1px solid var(--Grayscale-400); box-shadow: 0px 0px 8px 0px #0000000A; margin-left: 10px; } 
+.tree_editPOP { width: 150px; height: 178px; border-radius: 4px; border: 1px solid #D2D7E5; padding: 2px 0 0; background: #fff; box-shadow: 0 4px 10px rgba(0,0,0,0.1); z-index: 999; position: absolute; right: -4px; top:20px; display:none; } 
+.tree_editPOP.on { display:block; } 
+.tree_editPOP button { width: 100%; padding: 12px; text-align: left; box-sizing: border-box; } 
+.tree_editPOP button:hover { background:#F4F5F8; } 
+.arr_downtree { width:18px; height:8px; background:url(../images_admin/arr_downtree.svg) no-repeat center center; display:inline-block; vertical-align:middle; margin-left:10px; } 
+
+/* admin popup */
+.page-modal .adminPOP_cont + .modal_bottom { padding-bottom: 32px; } 
+
+
+
+/* img uploader*/
+.imgUploader { display: flex; flex-wrap: wrap; gap: 10px; } 
+.imgUploader .imgList { display: flex; gap: 10px; justify-content: flex-start; } 
+.imgUploader .imgList li { border: 1px solid #F4F5F8; border-radius: 8px; width: 120px; height: 90px; position: relative; overflow: hidden; box-sizing: border-box; } 
+.imgUploader .imgList li #btn_imgUp { width: 1px; height: 1px; position: absolute; } 
+.imgUploader.imgSize-123 .imgList li { width: 123px; height: 123px; } 
+.imgUploader .imgList li .btn_imgUp { width: 100%; height: 100%; background: url(../images_admin/thum_default123.svg) no-repeat center center; text-indent: -999px; cursor: pointer; } 
+.imgUploader .imgList li img { width: 100%; height: 100%; z-index: 0; } 
+.imgUploader .imgList li .btn-del { width: 14px; height: 14px; position: absolute; right: 3px; top: 3px; border-radius: 100%; opacity: 0; background: url(../images_admin/ico_del_white.svg) no-repeat center #fff; z-index: 999; } 
+.imgUploader .imgList li:hover { cursor: pointer; } 
+.imgUploader .imgList li img:hover + .btn-del { opacity: 0.8; } 
+.imgUploader .imgList li .btn-del:hover { opacity: 0.8; } 
+.imgUploader .guideTxt span { color: #8E97B4; margin-top: 8px; display: block; } 
